welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:-5: error: Unmatched closing brace '}' ignored here
	}
        ^Program:-4: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Program:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^